# Llama3-8B-Attention-Optimize

./: .gitignore  README.md  README_fpga_slice_golden_validation_CN.md  llama3_attention_golden_model.py  sync_to_github.ps1
A_attention_integration_final_v5/: README.md
CPU_Baseline/: .gitignore  CPU_PERFORMANCE_RESULT.md
FPT_BC_QK_Softmax_PV_Delivery_v5/: CHANGELOG.md  FILE_LIST.txt  LICENSE_NOTE.txt  MANIFEST_SHA256.txt  QUICK_START.md  README.md  STATIC_VALIDATION_SUMMARY.txt  VALIDATION_SUMMARY.txt  run_python_audits.bat  run_python_audits.sh  run_synthesis_bc_pipeline.tcl  run_synthesis_bc_system.tcl  run_synthesis_frontend_only.tcl  run_synthesis_full_pipeline.tcl  run_synthesis_rope_qk_pipeline.tcl  run_synthesis_row_buffer.tcl  run_vivado_bc_all.tcl  run_vivado_bc_extended.tcl  run_vivado_bc_full_optional.tcl  run_vivado_bc_small.tcl  run_vivado_rope_qk_small.tcl  run_vivado_v3_all.tcl  run_vivado_v3_full_pipeline_optional.tcl  run_vivado_v3_full_qk_optional.tcl  run_vivado_v3_quick.tcl  run_vivado_v4_all.tcl  run_vivado_v4_full_pipeline_optional.tcl  run_vivado_v4_full_qk_optional.tcl  run_vivado_v4_quick.tcl
PV_module/: README_PV_CN.md
QK_PV_module/: package-lock.json  xvlog.pb
QK_after_RoPE/: README.md
QK_module/: README_LAST.md  README_QK_BF16.md  README_SYS.md
QV_after_RoPE/: README_ROPE_QK_CN.md
RoPE/: README.md  bf16_addsub.v  (+11 more)
attention_mask_module/TEST_v1/attention_mask/hls/.autopilot/db/driver/src/: CMakeLists.txt  Makefile  xattention_mask.c  xattention_mask.h  xattention_mask_hw.h  xattention_mask_linux.c  xattention_mask_sinit.c
(+638 files in other folders)
